--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 flask
 flask-login
-tensorflow==2.13.0
+tensorflow==2.12.0
+keras==2.12.0
 numpy
 scikit-learn
 nltk
 textblob
+protobuf<4
 gunicorn
